--- a/styles/form.css
+++ b/styles/form.css
@@ -2,43 +2,50 @@
     width: 100%;
     display: flex;
     position: relative;
+    margin: 5% 5%;
     padding: 10% 5%;
-}
+} 
+
 .screen{
-    width: 95%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #A3BDBB;  
+    padding: 10% 10%;
 }
+
 .screen--left{
-    width: 40%;
-    height: 80%;
+    width: 50%;
+    height: 75%;
     background-color: #AE261C;
     position: relative;
-    padding: 1% 3%;
+    padding: 7% 7%;
     line-height: 2em;
 }
+
 .screen--right{
     width: 25%;
-    height: 80%; 
+    height: 75%;
     background-color: #F3B353;
     position: relative;
-    padding: 1% 3%;
+    padding: 7% 7%;
 }
+
 .screen__image{
     position: absolute; 
-    left: 45%;
-    top: 36%;
-    margin-bottom:-5%;
+    left: 37%;
+    top: 42%;
 }
+
 img{
-    width: 70%;
+    width: 80%;
 }
+
 textarea, input{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    width: 40%;
+    width: 90%;
     font-size: 18px;
     letter-spacing: 1px;
     background: #AE261C;
@@ -47,22 +54,32 @@ textarea, input{
     border-right:none;
     border-color: white;
     color:white;
+    display: block;
+    margin-bottom: 1.5rem;
+    margin-top: 0.5rem;
 }
+
+input{
+    padding-bottom: 1rem;
+}
+
 ::placeholder{
     color: white;
     opacity:0.4;
 }
-h1{
+
+label{
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     letter-spacing: 1px; 
     color: white;
 }
+
 button{
-    width: 40%;
-    margin-top: 7%;
+    width: 50%;
+    margin: 7% 0 0 15%;
     border-radius: 100px;
-    padding: 2% 2%;
+    padding: 4% 4%;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -71,6 +88,9 @@ button{
     background: #548088;
     border: solid #548088;
     position: relative;
-    left:25%;
-    margin-bottom:25%; /*It increased the height of the div automatically!*/
+}
+
+button:hover{
+    background-color: pink;
+    color:gray;
 }
